changed android version to 26.1.0 added packages changed package domain to dk.kugelberg

--- a/05 Implementation/AndroidProject/app/build.gradle
+++ b/05 Implementation/AndroidProject/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.hoek_helper"
+        applicationId "dk.kugelberg.hoek_helper"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -20,8 +20,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
