--- a/05 Implementation/AndroidProject/app/build.gradle
+++ b/05 Implementation/AndroidProject/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
+    testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
 }
