--- a/05 Implementation/AndroidProject/app/build.gradle
+++ b/05 Implementation/AndroidProject/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
     testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
