--- a/05 Implementation/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/05 Implementation/AndroidProject/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/IconRound"
+        android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
